fix alignment of text inside items in accordion

--- a/src/app/containers/results/results.component.scss
+++ b/src/app/containers/results/results.component.scss
@@ -26,6 +26,7 @@ section.results {
   section.quiz-summary {
     display: flex;
     flex-direction: column;
+    text-align: left;
 
     .quiz-summary-question {
       font-family: $font-stack;
